tests/miniJava/neg/003840_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if System.out.println ( { } ) ; } }
